<resources>
    <string name="default_web_client_id">262802383617-4aamsr4g0210lb9gnrsicb4o3d3ef5hf.apps.googleusercontent.com</string>
    <string name="app_name">PetCare Essentials</string>
    <string name="skipSignIn_button">SKIP</string>
    <string name="login_background">login_background</string>
    <string name="fab_google">Google Login</string>
    <string name="fab_guest">Guest Login</string>
    <string name="welcome">PetCare Essential</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="tv_forgot_password">Forgot Password</string>
    <string name="main_welcome">Welcome</string>
    <string name="main_categories">Categories</string>
    <string name="main_see_all">See all</string>
    <string name="supplies">Supplies</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="profile">Profile</string>
    <string name="caring">Caring</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_update_profile">UpdateProfileActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="select_province">Chọn tỉnh</string>
    <string name="select_district">Chọn quận</string>
    <string name="select_ward">Chọn phường</string>


    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="help_center">Help Center</string>
    <string name="address">Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="add_new_category">Add New Category</string>
    <string name="add_new_type">Add New Type</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="stock">Stock:</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm_add_to_cart">Confirm</string>
    <string-array name="genders">
        <item>@string/gender_male</item>
        <item>@string/gender_female</item>
    </string-array>

    <string-array name="category_status_array">
        <item>Active</item>
        <item>Inactive</item>
    </string-array>
    <string-array name="size_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
    <string-array name="suplies_status">
        <item>Discontinued</item>
        <item>Out of stock</item>
        <item>Temporarily discontinued</item>
        <item>New arrival</item>
        <item>In stock</item>
    </string-array>
    <string-array name="service_status">
        <item>Currently available</item>
        <item>Discontinued</item>
    </string-array>
    <string-array name="branch_store_status">
        <item>Newly Opened</item>
        <item>Open</item>
        <item>Temporarily Closed</item>
        <item>Closed</item>
    </string-array>
    <string-array name="discount_status">
        <item>New </item>
        <item>Active</item>
        <item>Disable</item>
    </string-array>

    <string-array name="order_status">
        <item>Waiting for order confirmation</item>
        <item>Order confirmed</item>
        <item>Delivery</item>
        <item>Delivery successful</item>
        <item>Cancel order</item>
        <item>Waiting for return confirmation</item>
        <item>Return confirmed</item>
        <item>Return successful</item>
    </string-array>

    <string-array name="regions_array">
        <item>Vietnam</item>
        <item>North</item>
        <item>Central</item>
        <item>South</item>
    </string-array>


    <string name="delete_cart_item_title">Delete Item</string>
    <string name="delete_cart_item_message">Are you sure you want to remove this product from the cart?</string>
    <string name="confirm_delete">Confirm</string>
    <string name="cancel">Hủy</string>
    <string name="mapbox_access_token">sk.eyJ1IjoidGFudGhvIiwiYSI6ImNtMnBzdGh0NjB2d3Qya3F6d3RqbmRxd3YifQ.-QWfcwRQFmlLjDsqLdJvng</string>


    <string name="payment_method">Payment method</string>
    <string name="zalo_method">ZaloPay</string>
    <string name="cod_method">Cash on Delivery</string>


    <string name="delivery_method">Delivery method</string>
    <string name="shipping_standard">Standard</string>
    <string name="shipping_express">Express</string>
    <string name="shipping_expedited">Expedited</string>
    <string name="pet_profile">Pet Profile</string>


    <string name="currency_vn">đ</string>
    <string name="search">Search</string>
    <string name="not_found">Not found</string>
    <string name="empty">Empty</string>
    <string name="review_approve"><![CDATA[Review & Approve]]></string>



    <string name="question_1">What products and services does the app offer for pets?</string>
    <string name="answer_1">The app offers a wide range of products for pets, including food, accessories, toys, clothing, and health care items. Additionally, you can book services such as grooming, hair trimming, and veterinary check-ups.</string>

    <string name="question_2">How can I book pet care services through the app?</string>
    <string name="answer_2">Simply go to the “Services” section, select the type of service you need, choose a suitable time and location, and confirm your booking. A confirmation order will be sent to you once the booking is completed.</string>

    <string name="question_3">What types of pets can I find suitable products for?</string>
    <string name="answer_3">The app provides products for various pets, including dogs, cats, and categories. You can filter products by pet type or category in the product catalog to make your search easier.</string>

    <string name="question_4">Does the app have any loyalty programs or discounts for frequent customers?</string>
    <string name="answer_4">We frequently offer special promotions, discounts, and vouchers for loyal customers.</string>

    <string name="question_5">What should I do if I’m not satisfied with a product or service?</string>
    <string name="answer_5">You can contact our customer support team through the app for assistance. We offer a 7-day return policy for unused products and will address any issues with services promptly to ensure your satisfaction.</string>

    <string name="question_6">What payment methods are supported on the app?</string>
    <string name="answer_6">The app supports various payment options, including ZaloPay, Paypal, Wallet, and cash on delivery (COD).</string>

    <string name="question_7">Where can I track my orders and service bookings?</string>
    <string name="answer_7">You can track your order status and service bookings in the “Order Service” section of the app. Detailed updates on your orders and appointments are provided there.</string>

    <string name="question_8">Does the app offer home delivery?</string>
    <string name="answer_8">We provide home delivery services nationwide. You can choose between express shipping or standard delivery, depending on your preference.</string>

    <string name="question_9">How can I find discounted or promotional products?</string>
    <string name="answer_9">Just visit the “Vouchers” section of the app when you order products to view a list of vouchers.</string>

    <string name="question_10">Does the app offer pet care advice?</string>
    <string name="answer_10">We have a team of experts ready to provide free advice through the store when you get in there. You can ask questions about nutrition, health, or pet care, and get quick responses from our specialists.</string>
</resources>