<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_screen"
        android:title="@string/home"
        android:icon="@drawable/nav1_selector"
        />

<!--    <item-->
<!--        android:id="@+id/cart_screen"-->
<!--        android:title="@string/cart"-->
<!--        android:icon="@drawable/nav2_selector"-->
<!--        />-->

<!--    <item-->
<!--        android:id="@+id/wishlist_screen"-->
<!--        android:title="@string/wishlist"-->
<!--        android:icon="@drawable/nav3_selector"-->
<!--        />-->

    <item
        android:id="@+id/caring_screen"
        android:title="@string/caring"
        android:icon="@drawable/nav4_selector"
        />

    <item
        android:id="@+id/profile_screen"
        android:title="@string/profile"
        android:icon="@drawable/nav5_selector"
        />

</menu>