<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    tools:context=".Activities.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/blue_bg2"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="24dp">

                    <TextView
                        android:id="@+id/tv_welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/main_welcome"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="UserName"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/iv_bell"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bell"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/iv_red_circle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintBottom_toTopOf="@+id/iv_bell"
                        app:layout_constraintEnd_toEndOf="@+id/iv_bell"
                        app:layout_constraintStart_toEndOf="@+id/iv_bell"
                        app:layout_constraintTop_toTopOf="@+id/iv_bell"
                        app:srcCompat="@drawable/red_circle"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/tv_no_of_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="99"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/iv_red_circle"
                        app:layout_constraintEnd_toEndOf="@id/iv_red_circle"
                        app:layout_constraintStart_toStartOf="@+id/iv_red_circle"
                        app:layout_constraintTop_toTopOf="@+id/iv_red_circle"
                        tools:ignore="HardcodedText" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <SearchView
                    tools:ignore="HardcodedText"
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="24dp"
                    android:ems="10"
                    android:queryHint="Search for products"
                    android:inputType="text"
                    android:background="@drawable/white_bg"/>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="16dp">

                <ProgressBar
                    android:id="@+id/progressBarBanner"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager2"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.viewpager2.widget.ViewPager2>

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dot_indicators"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:dotsColor="@color/dotBanner"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="6dp"
                    app:dotsSpacing="2dp"
                    app:dotsWidthFactor="2.5"
                    app:selectedDotColor="@color/primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:visibility="visible"/>



            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/main_categories"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/tv_see_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/main_see_all"
                    android:textColor="@color/primary"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>